[package]
authors = ["Kartik Singhal <kartiksinghal@gmail.com>", "Sumukha TV <tvsumukha@gmail.com>"]
name = "btclient"
version = "0.1.0"

[dependencies]
bip_bencode = "*"
bip_metainfo = "*"
bip_utracker = "*"
chrono = "*"
hyper = "*"
log = "*"
nom = "*"
rustyline = "*"
url = "*"

[dependencies.pretty_env_logger]
git = "https://github.com/seanmonstar/pretty-env-logger"
